--- a/SSPEvent/tickets/templates/event_detail.html
+++ b/SSPEvent/tickets/templates/event_detail.html
@@ -9,9 +9,9 @@
 <div class="container-md shadow-lg mx-auto">
 <p class="h2">Name : {{event.name}}</p>
 <p class="h4">Description : {{event.description}}</p>
-<p class="h5">Organizer : {{event.organizer.name}}</p>
+<p class="h5">Organizer : {{event.organizer.username}}</p>
 <p class="h5">Approver : {{event.approver.username}}</p>
-<p class="h5">Location : {{event.locations.username}}</p>
+<p class="h5">Location : {{event.locations.name}}</p>
 <p class="h5">Duration : {{event.event_start}}-{{event.event_end}}</p>
 <p class="h5">Status : {{event.event_status}}</p>
 </div>
