--- a/SSPEvent/tickets/templates/location_detail.html
+++ b/SSPEvent/tickets/templates/location_detail.html
@@ -3,7 +3,7 @@
 
 {% block title %}Tevents{% endblock %}
 
-{% block head %}Events-detail{% endblock %}
+{% block head %}Location-detail{% endblock %}
 
 {% block content %}
 <div class="container-md shadow-lg mx-auto">
