--- a/SSPEvent/tickets/templates/layout.html
+++ b/SSPEvent/tickets/templates/layout.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist\bootstrap-5.3.3-dist\css\bootstrap.css' %}">
+    <script src="{% static 'bootstrap-5.3.3-dist\bootstrap-5.3.3-dist\js\bootstrap.bundle.min.js' %}"></script>
+    
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
