--- a/SSPEvent/tickets/templates/nav.html
+++ b/SSPEvent/tickets/templates/nav.html
@@ -24,6 +24,12 @@
             
           </ul>
         </li>
+        <li class="nav-item">
+          <span class="nav-link">-- Welcome {{request.user.first_name}} {{request.user.last_name}} --</span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">LOGOUT</a>
+        </li>
     </ul>
     <form class="d-flex my-auto" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" name="search">
