--- a/SSPEvent/authen/templates/register.html
+++ b/SSPEvent/authen/templates/register.html
@@ -19,7 +19,8 @@
         <form action="{% url 'register' %}" method="POST">
             {% csrf_token %}
             <table>  
-                {{ form.as_table }}  
+                {{ form.as_table }}
+                {{ form_info.as_table }}
                  <tr>  
                     <td></td>  
                     <td><input type="submit" class="button is-link" value="Register" /></td>  
