--- a/SSPEvent/tickets/templates/event_detail.html
+++ b/SSPEvent/tickets/templates/event_detail.html
@@ -18,12 +18,22 @@
 
 <div class="shadow-lg"><i class="bi bi-ticket"></i>
     {% for ticket in tickets %}
-    <div class="container-md shadow-sm mx-auto row">
-        <div class="container-md justify-content-center">
+    <div class="container-md shadow-sm mx-auto row my-4">
+        <div class="container-md justify-content-center my-4">
             <p class="h2">{{ticket.name}}</p>
             <button class="btn btn-dark">Buy</button>
         </div>
     </div>
     {% endfor %}
+</div>
+
+<div class= "shadow-lg px-4 py-4">
+    <p class="h4">Add Ticket</p>
+<form class = "form-group px-2 py-2" action="" method="post">
+
+    {% csrf_token %}
+    {{form}}
+    <button class="btn btn-success my-4 " type="submit">Add</button>
+</form>
 </div>
 {% endblock %}
