--- a/SSPEvent/tickets/templates/location_list.html
+++ b/SSPEvent/tickets/templates/location_list.html
@@ -15,7 +15,9 @@
             <div class="card mb-4 rounded">
                 <a class="text-decoration-none"  style="color:black" href="{% url 'location-detail' location.pk %}">
                     <div class="w-100 overflow-hidden" style="max-height: 220px;">
-                        <img class="card-img-top img-fluid" src="{% static 'mikubox.jpg' %}" alt="1234">
+                        {% if location.cover_image %}
+                        <img class="card-img-top img-fluid" src="{{location.cover_image.url}}" alt="1234">
+                        {% endif %}
                     </div>
                     <div class="card-body">
                         <p class="h4 card-title">{{ location.name }}</p> 
