--- a/SSPEvent/tickets/templates/nav.html
+++ b/SSPEvent/tickets/templates/nav.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="{% url 'location-list'%}">Location</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My Profile</a>
+          <a class="nav-link" href="{% if request.user.is_authenticated %}{% url 'user-profile' request.user.username %}{% endif %}">My Profile</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
