--- a/SSPEvent/tickets/templates/event_detail.html
+++ b/SSPEvent/tickets/templates/event_detail.html
@@ -27,7 +27,13 @@
     <div class="container-md shadow-sm mx-auto row my-4">
         <div class="container-md justify-content-center my-4">
             <p class="h2">{{ticket.name}}</p>
-            <button class="btn btn-dark">Buy</button>
+            <p class="h2">{{ticket.price}}</p>
+            <form name="form-group" method="POST" action="{% url 'checkout'%}">
+                {% csrf_token %}
+                <input type="hidden" name="event_id" value="{{event.id}}">
+                <input type="hidden" name="ticket_id" value="{{ticket.id}}">
+                <button class="btn btn-success my-4 " type="submit">Add</button>
+            </form>
         </div>
     </div>
     {% endfor %}
