--- a/SSPEvent/tickets/templates/index.html
+++ b/SSPEvent/tickets/templates/index.html
@@ -3,15 +3,15 @@
 
 {% block title %}Tevents{% endblock %}
 
-{% block head %}Events{% endblock %}
+{% block head %}Welcome to Tevents{% endblock %}
 
 {% block content %}
-<div class="album py-5 bg-body-tertiary shadow">
+<div class="album pt-5 bg-body-tertiary">
     <div class="d-flex justify-content-start">
-        <h1>End soon</h1>
+        <h1>Start soon</h1>
         <a href="{% url 'event-list' %}" class="btn btn-primary ms-5" type="button">See more</a>
     </div>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 ">
+        <div class="p-4 row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 ">
             {% for event in events_startsoon %}       
             <div class="col">
                 <div class="card mb-4 rounded">
@@ -38,11 +38,11 @@
 </div>
 
 
-<div class="album py-5 bg-body-tertiary shadow">
+<div class="album pt-5 bg-body-tertiary">
     <div class="d-flex justify-content-start">
         <h1>End soon</h1>
     </div>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 ">
+        <div class="p-4 row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 ">
             {% for event in events_endsoon %}       
             <div class="col">
                 <div class="card mb-4 rounded">
