--- a/SSPEvent/tickets/templates/nav.html
+++ b/SSPEvent/tickets/templates/nav.html
@@ -31,7 +31,7 @@
         <span class="nav-link">-- Welcome {{request.user.username}} ({{request.user.first_name}} {{request.user.last_name}}) --</span>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}">LOGOUT</a>
+        <a class=" btn btn-outline-danger" href="{% url 'logout' %}">LOGOUT</a>
       </li>
     </ul>
     <form class="d-flex my-auto" role="search">
