--- a/SSPEvent/tickets/templates/create_event.html
+++ b/SSPEvent/tickets/templates/create_event.html
@@ -14,6 +14,8 @@
             {{form1.name}}
             <label for="">Price:</label>
             {{form1.price}}
+            <label for="">Amount:</label>
+            {{form1.amount}}
         {% endfor %}
         <button class="btn btn-success my-4" type="submit">Save</button>
     </form>
