--- a/SSPEvent/tickets/templates/layout.html
+++ b/SSPEvent/tickets/templates/layout.html
@@ -16,7 +16,7 @@
         </div>
     </nav>
     <div class="container-md py-2">
-      <p class="display-4 my-4">{% block head %}{% endblock %}</p>
+      <p class="display-4 my-4 row">{% block head %}{% endblock %}</p>
     </div>
 
     <div class="container-md py-4">
