--- a/SSPEvent/authen/templates/register.html
+++ b/SSPEvent/authen/templates/register.html
@@ -16,16 +16,18 @@
     </section>
     <div class="container pl-5">
         {{ form.non_field_errors }}
-        <form action="{% url 'register' %}" method="POST">
+        <form class="form-floating form-group" action="{% url 'register' %}" method="POST">
             {% csrf_token %}
+            
             <table>  
                 {{ form.as_table }}
                 {{ form_info.as_table }}
-                 <tr>  
+                <tr>  
                     <td></td>  
                     <td><input type="submit" class="button is-link" value="Register" /></td>  
                 </tr>  
-             </table> 
+            </table> 
+
         </form>
     </div>
 </body>
