--- a/SSPEvent/tickets/templates/manage-event.html
+++ b/SSPEvent/tickets/templates/manage-event.html
@@ -13,11 +13,14 @@
             {% for event in events %}
             <div class="col">
                 <div class="card mb-4 rounded">
-                    <a class="text-decoration-none"  style="color:black" href="{% url 'event-detail' event.pk %}">
+                    <div class="w-100 overflow-hidden" style="max-height: 220px;">
+
                         {% if event.cover_image %}
                         <!-- <p>{{event.cover_image.url}}</p> -->
                         <img class="card-img-top img-fluid" src="{{event.cover_image.url}}" alt="1234">
                         {% endif %}
+                        
+                    </div>
                         <div class="card-body">
                             <p class="h4 card-title">{{ event.name }}</p> 
                             <p class="card-text">{{ event.description }}</p> 
