--- a/SSPEvent/tickets/templates/nav.html
+++ b/SSPEvent/tickets/templates/nav.html
@@ -18,10 +18,15 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="{% url 'create-event' %}">Create Event</a></li>
+            {% if perms.tickets.add_location %}
             <li><a class="dropdown-item" href="{% url 'create-location' %}">Create Location</a></li>
+            {% endif %}
+            {% if perms.tickets.add_locationtype %}
             <li><a class="dropdown-item" href="{% url 'create-locationtype' %}">Create Location Type</a></li>
+            {% endif %}
+            {% if perms.tickets.manage_event %}
             <li><a class="dropdown-item" href="{% url 'manage-event' %}">Approve Event</a></li>
-            
+            {% endif %}
           </ul>
         </li>
     </ul>
@@ -31,7 +36,11 @@
         <span class="nav-link">-- Welcome {{request.user.username}} ({{request.user.first_name}} {{request.user.last_name}}) --</span>
       </li>
       <li class="nav-item">
+        {% if request.user.is_authenticated %}
         <a class=" btn btn-outline-danger" href="{% url 'logout' %}">LOGOUT</a>
+        {% else %}
+        <a class=" btn btn-outline-primary" href="{% url 'login' %}">LOGIN</a>
+        {% endif %}
       </li>
     </ul>
     <form class="d-flex my-auto" role="search">
