--- a/SSPEvent/tickets/templates/404.html
+++ b/SSPEvent/tickets/templates/404.html
@@ -3,7 +3,8 @@
 
 {% block title %}Tevents{% endblock %}
 
-{% block head %}Not Found{% endblock %}
+{% block head %}Error{% endblock %}
 
 {% block content %}
+<p class="h5"> {{errortext}}</p>
 {% endblock %}
