--- a/SSPEvent/tickets/templates/index.html
+++ b/SSPEvent/tickets/templates/index.html
@@ -10,7 +10,7 @@
     <div class="pt-5 ">
         <div class="d-flex justify-content-start">
             <h1>Start soon</h1>
-            <a href="{% url 'event-list' %}" class="btn btn-primary ms-5 justify-content-center" type="button"><p class="my-2">See more</p></a>
+            <a href="{% url 'event-list' %}" class="btn btn-secondary ms-5 justify-content-center" type="button"><p class="my-2">See more</p></a>
         </div>
             <div class="p-4 row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 ">
                 {% for event in events_startsoon %}       
