--- a/SSPEvent/tickets/templates/manage-event.html
+++ b/SSPEvent/tickets/templates/manage-event.html
@@ -13,6 +13,7 @@
             {% for event in events %}
             <div class="col">
                 <div class="card mb-4 rounded">
+                    <a class="text-decoration-none"  style="color:black" href="{% url 'event-detail' event.pk %}">
                     <div class="w-100 overflow-hidden" style="max-height: 220px;">
 
                         {% if event.cover_image %}
@@ -25,6 +26,7 @@
                             <p class="h4 card-title">{{ event.name }}</p> 
                             <p class="card-text">{{ event.description }}</p> 
                         </a>
+                    
                             <form class='row my-4' action="{% url 'manage-event'%}" method="post">
                                 {% csrf_token %}
                                 <input type="hidden" name="event_id" value="{{ event.id }}">
