--- a/SSPEvent/tickets/templates/nav.html
+++ b/SSPEvent/tickets/templates/nav.html
@@ -33,7 +33,9 @@
 
     <ul class="navbar-nav ms-auto pe-5">
       <li class="nav-item pe-2">
+        {% if request.user.is_authenticated %}
         <span class="nav-link">-- Welcome {{request.user.username}} ({{request.user.first_name}} {{request.user.last_name}}) --</span>
+        {% endif %}
       </li>
       <li class="nav-item">
         {% if request.user.is_authenticated %}
@@ -43,9 +45,11 @@
         {% endif %}
       </li>
     </ul>
+    {% if search_enable %}
     <form class="d-flex my-auto" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" name="search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
+    {% endif %}
   </div>
   
